--- a/app/styles/sass/varmixins.scss
+++ b/app/styles/sass/varmixins.scss
@@ -82,6 +82,11 @@ $gray:#cccccc;
 	-webkit-box-shadow: 3px 0 3px $shadow;
 	box-shadow: 3px 0 3px $shadow;
 }
+@mixin box_shadow_bottom($shadow: #000000){
+	-moz-box-shadow: 0 2px 2px $shadow;
+	-webkit-box-shadow: 0 2px 2px $shadow;
+	box-shadow: 0 2px 2px $shadow;
+}
 @mixin anim_transicion_ease( $segundos: 0.3s ){
 	transition: all $segundos ease;
 	-ms-transition: all $segundos ease;
